# Sber_OpenCV_Education

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mozgolom112/cameracalibrationapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  camera_calibration.cpp  camera_calibration.h  native-lib.cpp
app/src/main/java/com/mozgolom112/cameracalibrationapp/: CameraFragment.kt  CvCameraViewListener2.kt  MainActivity.kt
app/src/main/java/com/mozgolom112/cameracalibrationapp/models/: CalibrationData.kt
app/src/main/java/com/mozgolom112/cameracalibrationapp/screencamera/: CameraFragment.kt  CameraViewModel.kt
app/src/main/java/com/mozgolom112/cameracalibrationapp/screenresult/: CalibrationResultFragment.kt
app/src/main/java/com/mozgolom112/cameracalibrationapp/screenundistort/: UndistortCameraViewModel.kt  UndistortResultFragment.kt
app/src/main/res/layout/: activity_main.xml  fragment_calibration_result.xml  fragment_camera.xml  fragment_undistort_result.xml
app/src/main/res/navigation/: navigation.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/test/java/com/mozgolom112/cameracalibrationapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/java/src/org/opencv/android/: CameraBridgeViewBase.java
